--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@ display:none}
 
 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight6" aria-labelledby="offcanvasRightLabel6">
   <div class="offcanvas-header">
-    <h6 style="font-family: 'Comfortaa', cursive;" class="offcanvas-title" id="offcanvasRightLabel">Prices at different websites</h6>
+    <h6 style="font-family: 'Comfortaa', cursive;" class="offcanvas-title" id="offcanvasRightLabel6">Prices at different websites</h6>
      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
@@ -952,7 +952,7 @@ display:none}
 
 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight8" aria-labelledby="offcanvasRightLabel8">
   <div class="offcanvas-header">
-    <h6 style="font-family: 'Comfortaa', cursive;" class="offcanvas-title" id="offcanvasRightLabel">Prices at different websites</h6>
+    <h6 style="font-family: 'Comfortaa', cursive;" class="offcanvas-title" id="offcanvasRightLabel8">Prices at different websites</h6>
      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
