--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ display:none}
     <span class="bi bi-camera" style="font-size:12px"><b> Cameras :-</b></span><br><span style="font-size:14px;margin:0px;padding:2px;overflow:hidden"><span> 64 MP (Main)</span><br><span> 8 MP (Ultra wide)</span><br><span> 2 MP (Macro lens)</span><br><span> 2 MP (Depth lens)</span><br><span> 13 MP (Front)</span></span>  </div>  
 </div>
     <a href="https://nanoreview.net/en/phone/xiaomi-redmi-note-10s" class="btn btn-outline-primary" style="position:absolute;left:14px;bottom:16px">Full specifications</a>
-<button class="btn btn-warning" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" style="position:absolute;right:14px;bottom:16px">View prices</button>
+<button class="btn btn-warning" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight1" aria-controls="offcanvasRight" style="position:absolute;right:14px;bottom:16px">View prices</button>
 
 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight1" aria-labelledby="offcanvasRightLabel1">
   <div class="offcanvas-header">
@@ -838,7 +838,7 @@ display:none}
     <span class="bi bi-camera" style="font-size:12px"><b> Cameras :-</b></span><br><span style="font-size:14px;margin:0px;padding:2px;overflow:hidden"><span> 50 MP (Main)</span><br><span> No (Ultra wide)</span><br><span> 2 MP (Macro lens)</span><br><span> 2 MP (Depth lens)</span><br><span> 16 MP (Front)</span></span>  </div>  
 </div>
     <a href="https://nanoreview.net/en/phone/oppo-realme-narzo-50" class="btn btn-outline-primary" style="position:absolute;left:14px;bottom:16px">Full specifications</a>
-<button class="btn btn-warning" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" style="position:absolute;right:14px;bottom:16px">View prices</button>
+<button class="btn btn-warning" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight7" aria-controls="offcanvasRight" style="position:absolute;right:14px;bottom:16px">View prices</button>
 
 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight7" aria-labelledby="offcanvasRightLabel7">
   <div class="offcanvas-header">
