--- a/index.html
+++ b/index.html
@@ -1349,6 +1349,9 @@ display:none}
 </table>
 </div>  
   
+
+<br>
+<iframe src="https://www.flipkart.com/realme-narzo-50-speed-blue-64-gb/p/itm9d47ef5d10145?pid=MOBGC2E72ZFW9HBY&lid=LSTMOBGC2E72ZFW9HBYXHSNSR&marketplace=FLIPKART&q=realme+narzo+50&store=tyy%2F4io&pageUID=1662477056367" height="300px" width="500px"></iframe>
   
   
   </section>
