--- a/index.html
+++ b/index.html
@@ -1350,9 +1350,9 @@ display:none}
 </div>  
   
 
-<br>
-<iframe src="https://www.flipkart.com/realme-narzo-50-speed-blue-64-gb/p/itm9d47ef5d10145?pid=MOBGC2E72ZFW9HBY&lid=LSTMOBGC2E72ZFW9HBYXHSNSR&marketplace=FLIPKART&q=realme+narzo+50&store=tyy%2F4io&pageUID=1662477056367" height="700px" width="300px"></iframe>
-  
+<br><div style="overflow:hidden">
+<iframe scrolling="no" style="margin-top:-100px;margin-left:-100px" src="https://www.flipkart.com/realme-narzo-50-speed-blue-64-gb/p/itm9d47ef5d10145?pid=MOBGC2E72ZFW9HBY&lid=LSTMOBGC2E72ZFW9HBYXHSNSR&marketplace=FLIPKART&q=realme+narzo+50&store=tyy%2F4io&pageUID=1662477056367" height="700px" width="300px"></iframe>
+  </div>
   
   </section>
   
