--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@ display:none}
 <div style="display:none;position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
 </div>  <br>
 
-<div style="background-color:none;height:800px;position:relative;border:1px solid #dddddd">
+<div style="display:none;background-color:none;height:800px;position:relative;border:1px solid #dddddd">
 <h3 style="background-color:#f6f6f6;text-align:center;color:teal;font-family:'Georgia';">Price at Top10tech </h3>
 <div style="position:absolute;left:45%;width:200px;height:200px;background-color:none;top:120px;font-size:13px;padding:0px;border:1px solid #dddddd">
 <div style="position:absolute;top:0px;height:60px;background-color:#fbfbfb;padding:10px;width:100%;text-align:center"><div style="font-size:14px;text-align:center;height:20px;background-color:#fbfbfb"><b>Varient</b></div><span style="font-size:12px">4 GB RAM & 64 GB Storage</span></div>
