--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ display:none}
 <div style="position:absolute;top:50%;height:50%;width:100%;margin:0px;padding:14px;background-color:none">
 
 <div style="position:absolute;background-color:#f6f8f6;height:150px;width:42%;padding:8px">
-<span style="font-size:12px">Avg rating of users-<b> 4.2/5</b> (approx)</span><br><span style="font-size:12px">Avg rating of experts-<b> 3.4/5</b> (approx)</span><br><span style="font-size:12px">Price seg rating-<b> 4.5/5</b></span><br><a style="font-size:12px" href="https://www.google.com/search?q=redmi+note+10s&client=ms-android-samsung-gj-rev1&prmd=sivn&sxsrf=ALiCzsZe712IrWcYlH7jn2I_IS1xpkXVjA:1662394752521&source=lnms&tbm=isch&sa=X&ved=2ahUKEwj1-cyFh_75AhWf7XMBHXL6AOYQ_AUoAnoECAIQAg&biw=412&bih=756&dpr=2.63">View photos</a>
+<span style="font-size:12px">Avg rating of users-<b> 4.2/5</b> (approx)</span><br><span style="font-size:12px">Avg rating of experts-<b> 3.4/5</b> (approx)</span><br><span style="font-size:12px">Price seg rating-<b> 4.5/5</b></span><br><a style="font-size:12px" href="https://www.google.com/search?q=redmi+note+10s&client=ms-android-samsung-gj-rev1&prmd=sivn&sxsrf=ALiCzsZe712IrWcYlH7jn2I_IS1xpkXVjA:1662394752521&source=lnms&tbm=isch&sa=X&ved=2ahUKEwj1-cyFh_75AhWf7XMBHXL6AOYQ_AUoAnoECAIQAg&biw=412&bih=756&dpr=2.63"> Blue</a><a> Purple</a><a> White</a><a> Black</a>
  
 </div>   
 <div style="position:absolute;height:150px;width:42%;padding:6px;background-color:#f6f8f6;right:14px">
