--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@ display:none}
 <div style="position:absolute;top:0px;left:5px;width:60px;height:32px;background-color:#b12703;color:white;padding:3px;text-align:center"># 1</div>
 <div style="position:absolute;top:0px;left:25%;right:25%;background-color:#f6f6f6;width:160px;height:26px;text-align:center;color:teal"> Redmi note 10s</div>
 <div style="position:absolute;height:50%;width:38%;left:0px;align-items:center;background-color:red">
-    <img src="https://m.media-amazon.com/images/I/81B0HJigO-L._SX522_.jpg" class="card-img-top" alt="..." style="padding:1px;height:160px;position:absolute;top:40px;width:140px"></div>
+    <img src="https://m.media-amazon.com/images/I/81B0HJigO-L._SX522_.jpg" class="card-img-top" alt="..." style="padding:1px;height:160px;position:absolute;top:40px;width:140px">
+<span><a href="">This</a><a> that</a></span>
+</div>
 <div style="position:absolute;width:61%;height:50%;left:39%;right:0px;margin:0px;padding:0px"><br><br>
 <span class="bi bi-cpu" style="font-size:12px"> Mediatek Helio G95 (2.05 GHz)  </span><br>
 <span class="bi bi-memory" style="font-size:12px"> RAM- 6 GB or 8 GB (2133 Mhz)  </span><br>
