--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ display:none}
 <div style="position:absolute;top:0px;left:25%;right:25%;background-color:#f6f6f6;width:160px;height:26px;text-align:center;color:teal"> Redmi note 10s</div>
 <div style="position:absolute;height:50%;width:38%;left:0px;align-items:center;background-color:red">
     <img src="https://m.media-amazon.com/images/I/81B0HJigO-L._SX522_.jpg" class="card-img-top" alt="..." style="padding:1px;height:160px;position:absolute;top:40px;width:140px">
-<div style="position:relative;top:202px;font-size:12px;padding:1px;width:140px"><span>Colors:-</span><a href="#"> Red</a><a href="#">Purple</a></div>
+<div style="position:relative;top:202px;font-size:12px;padding:1px;width:140px"><span>Colors:-</span><a href="#"> Red</a> <a href="#"> Purple </a> <a href="">Black</a> <a href="">Blue</a></div>
 </div>
 <div style="position:absolute;width:61%;height:50%;left:39%;right:0px;margin:0px;padding:0px"><br><br>
 <span class="bi bi-cpu" style="font-size:12px"> Mediatek Helio G95 (2.05 GHz)  </span><br>
