--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@ display:none}
 <div style="position:absolute;top:50%;height:50%;width:100%;margin:0px;padding:14px;background-color:none">
 
 <div style="position:absolute;background-color:#f6f8f6;height:150px;width:42%;padding:8px">
-<span style="font-size:12px">Avg rating of users-<b> 4.2/5</b> (approx)</span><br><span style="font-size:12px">Avg rating of experts-<b> 3.4/5</b> (approx)</span><br><span style="font-size:12px">Price seg rating-<b> 4.5/5</b></span><br><a style="font-size:12px" href="https://www.flipkart.com/full-image-view">White </a><a  style="font-size:12px" href="https://rukminim1.flixcart.com/image/1100/1100/kyeqjrk0/mobile/2/p/p/-original-imagan9qjzxu7zgh.jpeg?q=20"> Purple </a><a style="font-size:12px" href="https://rukminim1.flixcart.com/image/1082/1082/kyeqjrk0/mobile/u/i/0/-original-imagan9qsryhppuc.jpeg?q=90"> White </a><a style="font-size:12px" href="https://rukminim1.flixcart.com/image/1082/1082/kyeqjrk0/mobile/n/1/o/-original-imagan9qeeypsg4u.jpeg?q=90"> Black </a>
- 
+<span style="font-size:12px">Avg rating of users-<b> 4.2/5</b> (approx)</span><br><span style="font-size:12px">Avg rating of experts-<b> 3.4/5</b> (approx)</span><br><span style="font-size:12px">Price seg rating-<b> 4.5/5</b></span><br>
+
 </div>   
 <div style="position:absolute;height:150px;width:42%;padding:6px;background-color:#f6f8f6;right:14px">
     <span class="bi bi-camera" style="font-size:12px"><b> Cameras :-</b></span><br><span style="font-size:14px;margin:0px;padding:2px;overflow:hidden"><span> 64 MP (Main)</span><br><span> 8 MP (Ultra wide)</span><br><span> 2 MP (Macro lens)</span><br><span> 2 MP (Depth lens)</span><br><span> 13 MP (Front)</span></span>  </div>  
