--- a/index.html
+++ b/index.html
@@ -1173,11 +1173,24 @@ display:none}
   </div>
 </div><br>
 
-  
-
+ 
 
   
   <br><br><br><br><br><br><br>
+
+<style>
+table.dataTable thead .sorting:after,
+table.dataTable thead .sorting:before,
+table.dataTable thead .sorting_asc:after,
+table.dataTable thead .sorting_asc:before,
+table.dataTable thead .sorting_asc_disabled:after,
+table.dataTable thead .sorting_asc_disabled:before,
+table.dataTable thead .sorting_desc:after,
+table.dataTable thead .sorting_desc:before,
+table.dataTable thead .sorting_desc_disabled:after,
+table.dataTable thead .sorting_desc_disabled:before {
+  bottom: .5em;
+}</style>
   <div class="table-responsive">
   <table class="table" id="tab">
   <thead>
