--- a/index.html
+++ b/index.html
@@ -1376,7 +1376,7 @@ table.dataTable thead .sorting_desc_disabled:before {
 </div>  
   
 <script>
-$('#sortTable').DataTable();
+$('#tab').DataTable();
 </script>
 
 
