--- a/index.html
+++ b/index.html
@@ -1224,7 +1224,7 @@ table.dataTable thead .sorting_desc_disabled:before {
   <tbody>
     <tr>
       <th scope="row" style="position:sticky;left:0px;background-color:white">Poco M4 pro 5g</th>
-      <td>MediaTek Dimensity 810</td>
+      <td contenteditable='true'>MediaTek Dimensity 810 edit</td>
       <td class="table-success">2.4 GHz</td>
       <td class="table-success">4/6/8 GB</td>
       <td>2133 Mhz</td>
