--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap4.min.js"></script>
 
+tructions, or add the following lines to your page.
+
+<link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
+<script defer src="https://pyscript.net/alpha/pyscript.js"></script>
 
 </head>
   <body style="background-color:#f6f7f9">
@@ -1362,7 +1366,7 @@ display:none}
 </table>
 </div> 
 
-
+<py-script>print('This is python here')</py-script'>
  
   
 <script>
