--- a/index.html
+++ b/index.html
@@ -1366,8 +1366,7 @@ display:none}
 </table>
 </div> 
 
-<py-script>print('This is python here')</py-script'>
- 
+
   
 <script>
 $('#tab').DataTable();
@@ -1380,7 +1379,8 @@ $('#tab').DataTable();
   
   
   
-  
+  <py-script>print('This is python here')</py-script>
+ 
   
   
   
