--- a/index.html
+++ b/index.html
@@ -1353,7 +1353,12 @@ display:none}
       <td>334281</td>
       <td>1791</td>
       <td>6000 mAh</td>
-      <td>20 W (Fast)</td> 
+      <td>
+<py-script>
+a=20
+b=a+20
+print(b)</py-script>
+</td> 
       <td>Mono</td>
       <td>Yes</td>
     </tr>
