--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('https://images.pexels.com/photos/5081398/pexels-photo-5081398.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+  background-image: url('https://images.pexels.com/photos/163143/sackcloth-sackcloth-textured-laptop-ipad-163143.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
   min-height: 100%;
   background-position: center;
   background-size: cover;
@@ -25,8 +25,9 @@ body, html {height: 100%}
     Logo
   </div>
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
+    <h3 class="w3-jumbo w3-animate-top">COMING SOON</h3>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
+    <p class="w3-center"><a class="w3-button" href="#">Button</a></p>
     <p class="w3-large w3-center">35 days left</p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
