--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@ body, html {height: 100%}
     Logo
   </div>
   <div class="w3-display-middle">
-    <h3 class="w3-jumbo w3-animate-top">COMING SOON</h3>
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
+    <h4 class="w3-jumbo w3-animate-top w3-center"></h4>
+    <p class="w3-center">Top gaming smartphones under Rs 15000</p>
+    <hr class="w3-border-white" style="margin:auto;width:40%">
+    <p class="w3-left">Chat with our technical expert in whatsapp and he will help ypu out in choosing the best 
+gaming smartphone under Rs 15000 </p>
     <p class="w3-center"><a class="w3-button w3-white" href="#">Button</a></p>
-    <p class="w3-large w3-center" id="countdown">35 days left</p>
+    <p class="w3-large w3-center" id="countdown"></p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
     Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
@@ -56,7 +59,7 @@ var x = setInterval(function() {
   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
     
   // Output the result in an element with id="demo"
-  document.getElementById("countdown").innerHTML = days + "d " + hours + "h "
+  document.getElementById("countdown").innerHTML = "Free service-"+ "Time left:" + days + "d " + hours + "h "
   + minutes + "m " + seconds + "s ";
     
   // If the count down is over, write some text 
