--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ body, html {height: 100%}
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
     Logo
   </div>
-  <div class="w3-display-middle">
-    <h4 class="w3-jumbo w3-animate-top w3-center"></h4>
+  <div class="w3-display-middle" style="letter-spacing:1px">
+    
     <p class="w3-center w3-large">Top gaming smartphones under Rs 15000</p>
     <hr class="w3-border-white" style="margin:auto;width:40%">
     <p class="w3-left">Chat with our technical expert in whatsapp and he will help you out in choosing the best 
