--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body, html {height: 100%}
     <hr class="w3-border-white" style="margin:auto;width:40%">
     <p class="w3-left">Chat with our technical expert in whatsapp and he will help you out in choosing the best 
 gaming smartphone under Rs 15000 </p>
-    <p class="w3-center"><a class="w3-button " href="#" style="background-color:#ffa41d">Whatsapp</a></p>
+    <p class="w3-center"><a class="w3-button w3-text-black" href="#" style="background-color:#ffa41d;letter-spacing:normal">Whatsapp</a></p>
     <p class="w3-large w3-center" id="countdown"></p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
