--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    Logo
+    Top10tech
   </div>
   <div class="w3-display-middle" style="letter-spacing:1px">
     
@@ -30,10 +30,11 @@ body, html {height: 100%}
     <hr class="w3-border-white" style="margin:auto;width:40%">
     <p class="w3-left">Chat with our technical expert in whatsapp and he will help you out in choosing the best 
 gaming smartphone under Rs 15000 </p>
-    <p class="w3-center"><a class="w3-button w3-text-black" href="#" style="background-color:#ffa41d;letter-spacing:normal">Whatsapp</a></p>
+    <p class="w3-center"><a class="w3-button w3-text-black" href="#" style="background-color:#ffa41d;letter-spacing:normal"><img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png"/> Whatsapp</a></p>
     <p class="w3-large w3-center" id="countdown"></p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
+<a target="_blank" href="https://icons8.com/icon/16713/whatsapp">WhatsApp icon by Icons8</a><br>
     Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
   </div>
 </div>
