--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ body, html {height: 100%}
     <p class="w3-left">Chat with our technical expert in whatsapp and he will help you out in choosing the best 
 gaming smartphone under Rs 15000 </p>
     <p class="w3-center"><a class="w3-button w3-text-black" href="#" style="background-color:#ffa41d;letter-spacing:normal"><img src="https://img.icons8.com/color/38/000000/whatsapp--v1.png"/> <b>Whatsapp</b></a></p>
-    <p class="w3-large w3-center" id="countdown"></p>
+  <p class="w3-large w3-center" id="">Free service</p>  
+<p class="w3-large w3-center" id="countdown"></p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
 <a target="_blank" href="https://icons8.com/icon/16713/whatsapp">WhatsApp icon by Icons8</a><br>
@@ -60,7 +61,7 @@ var x = setInterval(function() {
   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
     
   // Output the result in an element with id="demo"
-  document.getElementById("countdown").innerHTML = "Free service-" + "Time left:--" + days + "d " + hours + "h "
+  document.getElementById("countdown").innerHTML = "Time left:--" + days + "d " + hours + "h "
   + minutes + "m " + seconds + "s ";
     
   // If the count down is over, write some text 
