--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    Top10tech
+    hiveoftech
   </div>
   <div class="w3-display-middle" style="letter-spacing:1px">
     
