--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('https://images.pexels.com/photos/163143/sackcloth-sackcloth-textured-laptop-ipad-163143.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+  background-image: url('https://cdn.pixabay.com/photo/2017/04/03/15/52/mobile-phone-2198770_1280.png');
   min-height: 100%;
   background-position: center;
   background-size: cover;
