--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('https://cdn.pixabay.com/photo/2017/04/03/15/52/mobile-phone-2198770_1280.png');
+  background-image: url('https://cdn.pixabay.com/photo/2014/04/03/21/15/monitor-313002_1280.jpg');
   min-height: 100%;
   background-position: center;
   background-size: cover;
@@ -20,7 +20,7 @@ body, html {height: 100%}
 </head>
 <body>
 
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+<div class="bgimg w3-display-container w3-animate-opacity w3-text-black">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
     hiveoftech
   </div>
