--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@ body, html {height: 100%}
   </div>
   <div class="w3-display-middle" style="letter-spacing:1px">
     
-    <p class="w3-center w3-large">Top gaming smartphones under Rs 15000</p>
+    <p class="w3-center w3-large">Top smartphones under Rs 15000</p>
     <hr class="w3-border-white" style="margin:auto;width:40%">
     <p class="w3-left">Chat with our technical expert in whatsapp and he will help you out in choosing the best 
-gaming smartphone under Rs 15000 </p>
+smartphone under Rs 15000 </p>
     <p class="w3-center"><a class="w3-button w3-text-black" href="https://wa.me/message/XK4JPY42B2LGL1" style="background-color:#ffa41d;letter-spacing:normal"><img src="https://img.icons8.com/color/38/000000/whatsapp--v1.png"/> <b>Whatsapp</b></a></p>
   <p class="w3-large w3-center" id="">Free service</p>  
 <p class="w3-large w3-center" id="countdown"></p>
