--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@ body, html {height: 100%}
     <p class="w3-center w3-large">Top smartphones under Rs 15000</p>
     <hr class="w3-border-white" style="margin:auto;width:40%">
     <p class="w3-left">Chat with our technical expert in whatsapp and he will help you out in choosing the best 
-smartphone under Rs 15000 </p>
+smartphone under Rs 15000. He will also help you out in buying from the right place so that you can get maximum discount </p>
     <p class="w3-center"><a class="w3-button w3-text-black" href="https://wa.me/message/XK4JPY42B2LGL1" style="background-color:#ffa41d;letter-spacing:normal"><img src="https://img.icons8.com/color/38/000000/whatsapp--v1.png"/> <b>Whatsapp</b></a></p>
-  <p class="w3-large w3-center" id="">Free service</p>  
+  <p class="w3-large w3-center" id="">Free trial</p>  
 <p class="w3-large w3-center" id="countdown"></p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
