--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ body, html {height: 100%}
 smartphone under Rs 15000. He will also help you out in buying from the right place so that you can get maximum discount </p>
     <p class="w3-center"><a class="w3-button w3-text-black" href="https://wa.me/message/XK4JPY42B2LGL1" style="background-color:#ffa41d;letter-spacing:normal"><img src="https://img.icons8.com/color/38/000000/whatsapp--v1.png"/> <b>Whatsapp</b></a></p>
   <p class="w3-large w3-center" id="">Free trial</p>  
+<p class="w3-small w3-center" id="">Thereafter Rs 49/year</p>  
 <p class="w3-large w3-center" id="countdown"></p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
@@ -64,7 +65,7 @@ var x = setInterval(function() {
     
   // Output the result in an element with id="demo"
   document.getElementById("countdown").innerHTML = "Time left:--" + days + "d " + hours + "h "
-  + minutes + "m " + seconds + "s ";
+  + minutes + "m ";
     
   // If the count down is over, write some text 
   if (distance < 0) {
