--- a/newfile.html
+++ b/newfile.html
@@ -1,4 +1,15 @@
-
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  </head>
+  <body>
+    <h5 style="text-align:center">Things to consider before buying smartphone</h5>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+<div style="padding:8px">
 <p><b><u>Camera</u></b>- Most people thought that higher the
 mega pixels (mp) of cameras,higher will be the camera quality.
 But this is not truth.Mega pixels are only responsible for 
@@ -25,3 +36,7 @@ which is not very good for the phone.</p>
 
 <p><b>Battery capacity</b>Most people think that higher the MAh of battery the better it is.
 But is not true. The backup of your phone depends on lots of factors. It depends on software.</p>
+</div>
+
+  </body>
+</html>
