--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ smartphone under Rs 15000. He will also help you out in buying from the right pl
 <p class="w3-large w3-center" id="countdown"></p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
-<p> Please note that we have done research according to our own way.It may vary </p>
+<p> Please note that we have done research according to our own way.It may <a href="newfile.html">vary </a></p>
 <a target="_blank" href="https://icons8.com/icon/16713/whatsapp">WhatsApp icon by Icons8</a><br>
     Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a><br>
 
