--- a/newfile.html
+++ b/newfile.html
@@ -23,6 +23,14 @@ of image.</p>
 will be performance.But it is not truth.The performance of phone depends on RAM speed and memory type not on RAM capacity.
 RAM capacity helps us only in multi tasking.RAM capacity does not increase the performance of phone
 Higher the speed,higher will be the performance</p>
+
+<div style="background-color:#f6f6f6">
+<p class="" style="text-align:center">Chat with our technical expert in whatsapp and he will help you out in choosing the best 
+smartphone under Rs 15000. He will also help you out in buying from the right place so that you can get maximum discount </p>
+</div>
+
+
+
 <p><b><u>CPU</u></b>Most peolple think that the performance of the cpu
 depends only on its clock speed.But it is not truth.The performance of the cpu mostly depends
 on its architecture,no of cores it has,its lithography process etc.The priorty
