--- a/newfile.html
+++ b/newfile.html
@@ -9,7 +9,7 @@
   <body>
     <h5 style="text-align:center">Things to consider before buying smartphone</h5>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-<div style="padding:8px">
+<div style="padding:30px">
 <p><b><u>Camera</u></b>- Most people thought that higher the
 mega pixels (mp) of cameras,higher will be the camera quality.
 But this is not truth.Mega pixels are only responsible for 
@@ -31,18 +31,18 @@ smartphone under Rs 15000. He will also help you out in buying from the right pl
 
 
 
-<p><b><u>CPU</u></b>Most peolple think that the performance of the cpu
+<p><b><u>CPU</u></b>-Most peolple think that the performance of the cpu
 depends only on its clock speed.But it is not truth.The performance of the cpu mostly depends
 on its architecture,no of cores it has,its lithography process etc.The priorty
 of clock speed is not much as compared to its architecture.</p>
 <p><b>Storage</b>Most people think higher the storage,more better it will be. But 
 it is not truth. The speed of phone depends on storage type not on storage capacity.</p>
 
-<p><b>Charging speed</b>Most people think that higher the charging speed the better it is.
+<p><b>Charging speed</b>-Most people think that higher the charging speed the better it is.
 But it is not.Because the phone which charges quickly also discharges quickly.Besides more heat is produced
 which is not very good for the phone.</p>
 
-<p><b>Battery capacity</b>Most people think that higher the MAh of battery the better it is.
+<p><b>Battery capacity</b>-Most people think that higher the MAh of battery the better it is.
 But is not true. The backup of your phone depends on lots of factors. It depends on software.</p>
 </div>
 
