--- a/newfile.html
+++ b/newfile.html
@@ -7,9 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   </head>
   <body>
+<h3 style="12px">Hiveoftech</h3>
+<div style="padding:30px">
     <h5 style="text-align:center">Things to consider before buying smartphone</h5>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-<div style="padding:30px">
+
 <p><b><u>Camera</u></b>- Most people thought that higher the
 mega pixels (mp) of cameras,higher will be the camera quality.
 But this is not truth.Mega pixels are only responsible for 
@@ -25,7 +27,8 @@ RAM capacity helps us only in multi tasking.RAM capacity does not increase the p
 Higher the speed,higher will be the performance</p>
 
 <div style="background-color:#f6f6f6">
-<p class="" style="text-align:center">Chat with our technical expert in whatsapp and he will help you out in choosing the best 
+<h6>Confused! Which smartphone to buy under Rs 15000</h6>
+<p class="" style="text-align:center;padding:20px">Chat with our technical expert in whatsapp and he will help you out in choosing the best 
 smartphone under Rs 15000. He will also help you out in buying from the right place so that you can get maximum discount </p>
 </div>
 
