--- a/newfile.html
+++ b/newfile.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   </head>
   <body>
-<h3 style="12px">Hiveoftech</h3>
+<div style="padding:12px"><h3>Hiveoftech</h3></div>
 <div style="padding:30px">
     <h5 style="text-align:center">Things to consider before buying smartphone</h5>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
@@ -27,7 +27,8 @@ RAM capacity helps us only in multi tasking.RAM capacity does not increase the p
 Higher the speed,higher will be the performance</p>
 
 <div style="background-color:#f6f6f6">
-<h6>Confused! Which smartphone to buy under Rs 15000</h6>
+<div style="padding:15px">
+<h6>Confused! Which smartphone to buy under Rs 15000</h6></div>
 <p class="" style="text-align:center;padding:20px">Chat with our technical expert in whatsapp and he will help you out in choosing the best 
 smartphone under Rs 15000. He will also help you out in buying from the right place so that you can get maximum discount </p>
 </div>
@@ -38,7 +39,8 @@ smartphone under Rs 15000. He will also help you out in buying from the right pl
 depends only on its clock speed.But it is not truth.The performance of the cpu mostly depends
 on its architecture,no of cores it has,its lithography process etc.The priorty
 of clock speed is not much as compared to its architecture.</p>
-<p><b>Storage</b>Most people think higher the storage,more better it will be. But 
+
+<p><b>Storage</b>- Most people think higher the storage,more better it will be. But 
 it is not truth. The speed of phone depends on storage type not on storage capacity.</p>
 
 <p><b>Charging speed</b>-Most people think that higher the charging speed the better it is.
