--- a/newfile.html
+++ b/newfile.html
@@ -31,7 +31,7 @@ Higher the speed,higher will be the performance</p>
 <h6>Confused! Which smartphone to buy under Rs 15000</h6></div>
 <p class="" style="text-align:center;padding:15px">Chat with our technical expert in whatsapp and he will help you out in choosing the best 
 smartphone under Rs 15000. He will also help you out in buying from the right place so that you can get maximum discount </p>
-<p class="" style="align-items:center"><button class="" href="https://wa.me/message/XK4JPY42B2LGL1" style="background-color:#ffa41d;letter-spacing:normal"><img src="https://img.icons8.com/color/38/000000/whatsapp--v1.png"/> <b>Whatsapp</b></button></p>
+<p class="" style="text:align:center"><a class="btn" role="button" href="https://wa.me/message/XK4JPY42B2LGL1" style="background-color:#ffa41d"><img src="https://img.icons8.com/color/38/000000/whatsapp--v1.png"/> <b>Whatsapp</b></a></p>
 </div>
 
 
