--- a/newfile.html
+++ b/newfile.html
@@ -26,7 +26,7 @@ will be performance.But it is not truth.The performance of phone depends on RAM 
 RAM capacity helps us only in multi tasking.RAM capacity does not increase the performance of phone
 Higher the speed,higher will be the performance</p>
 
-<div style="background-color:#f6f6f6">
+<div style="background-color:#f6f6f6;text-align:center;align-items:center">
 <div style="padding:15px;text-align:center">
 <h6>Confused! Which smartphone to buy under Rs 15000</h6></div>
 <p class="" style="text-align:center;padding:15px">Chat with our technical expert in whatsapp and he will help you out in choosing the best 
