--- a/newfile.html
+++ b/newfile.html
@@ -9,6 +9,18 @@
   <body>
 <div style="padding:12px;width:100%;background-color:#e3f2fd"><h3>Hiveoftech</h3></div>
 <div style="padding:30px">
+<p>Some of the <u>average</u> performance smartphone under are:-<br>
+(i) Redmi Note 10s (ii) Redmi note 10T 5g (iii) Oppo A74 5g (iv) Realme 9 (v) Oppo F19
+</p>
+<p> If you want to know the best smartphone that will meet your need then fill the google form below
+and our technical adviser will contact you via chat or email.</p>
+<p style="text-align:center"><b>Free trial</b></p></div>
+
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfKC0ycsBJOFBMIDvTWB_VfO51ifvJQ8WK-34LZNONtrP_zwQ/viewform?embedded=true" width="400" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<br>
+
+
+<div style="padding:30px">
     <h5 style="text-align:center">Things to consider before buying smartphone</h5>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 
@@ -52,7 +64,6 @@ which is not very good for the phone.</p>
 <p><b>Battery capacity</b>-Most people think that higher the MAh of battery the better it is.
 But is not true. The backup of your phone depends on lots of factors. It depends on software.</p>
 </div>
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfKC0ycsBJOFBMIDvTWB_VfO51ifvJQ8WK-34LZNONtrP_zwQ/viewform?embedded=true" width="400" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 
 
