--- a/newfile.html
+++ b/newfile.html
@@ -9,10 +9,10 @@
   <body>
 <div style="padding:12px;width:100%;background-color:#e3f2fd"><h3>Hiveoftech</h3></div>
 <div style="padding:30px">
-<p>Some of the <u>average</u> performance smartphone under are:-<br>
-(i) Redmi Note 10s (ii) Redmi note 10T 5g (iii) Oppo A74 5g (iv) Realme 9 (v) Oppo F19
+<p>Some of the <u>average</u> performance smartphone under Rs 15000 are:-<br>
+(i) Redmi Note 10s (ii) Redmi note 10T 5g (iii) Oppo A74 5g (iv) Realme 9 (v) Oppo F19 etc...
 </p>
-<p> If you want to know the best smartphone that will meet your need then fill the google form below
+<p> <b>If</b> you want to know the best smartphone that will meet your need (for example:- gaming with avg camera,high camera with avg gaming etc) then fill the google form below
 and our technical adviser will contact you via chat or email.</p>
 <p style="text-align:center"><b>Free trial</b></p></div>
 
