--- a/newfile.html
+++ b/newfile.html
@@ -34,7 +34,7 @@ camera sensor size(the larger,the better),camera focal length,camera sensor type
 seeing all these then we have to look for mega pixels i.e the priority of mega pixels is very less for quality
 of image.</p>
 
-<div style="background-color:#f6f6f6;text-align:center;align-items:center">
+<div style="background-color:#f6f6f6;text-align:center;align-items:center;display:none">
 <div style="padding:15px;text-align:center">
 <h6>Confused! Which smartphone to buy under Rs 15000</h6></div>
 <p class="" style="text-align:center;padding:15px">Chat with our technical expert in whatsapp and he will help you out in choosing the best 
