--- a/newfile.html
+++ b/newfile.html
@@ -9,11 +9,15 @@
   <body>
 <div style="padding:12px;width:100%;background-color:#e3f2fd"><h3>Hiveoftech</h3></div>
 <div style="padding:30px">
+<p><span style="color:red">*</span> There is not any smartphone which is best in all aspects. For example 
+if you want better camera than you may need to sacrifice with the cpu performance in the price range</p>
 <p>Some of the <u>average</u> performance smartphone under Rs 15000 are:-<br>
 (i) Redmi Note 10s (ii) Redmi note 10T 5g (iii) Oppo A74 5g (iv) Realme 9 (v) Oppo F19 etc...
 </p>
-<p> <b>If</b> you want to know the <u>best</u> smartphone that will meet your <u>need</u> (for example:- gaming with avg camera,high camera with avg gaming etc) then fill the google form below
+<p> <span style="color:red">*</span><b>If</b> you want to know the <u>best</u> smartphone that will meet your <u>need</u> (for example:- gaming with avg camera,high camera with avg gaming etc) then fill the google form below
 and our technical adviser will contact you via chat or email.</p>
+<p><span style="color:red">*</span>If you are confused with the buying decision on some smartphones then fill only the contact details given below on the google form.Our team will contact and help you in your buying decision</p>
+
 <p style="text-align:center"><b>Free trial</b></p></div>
 
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfKC0ycsBJOFBMIDvTWB_VfO51ifvJQ8WK-34LZNONtrP_zwQ/viewform?embedded=true" width="400" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
