--- a/newfile.html
+++ b/newfile.html
@@ -15,7 +15,7 @@ if you want better camera than you may need to sacrifice with the cpu performanc
 (i) Redmi Note 10s (ii) Redmi note 10T 5g (iii) Oppo A74 5g (iv) Realme 9 (v) Oppo F19 etc...
 </p>
 <p> <span style="color:red">* </span><b>If</b> you want to know the <u>best</u> smartphone that will meet your <u>need</u> (for example:- gaming with avg camera,high camera with avg gaming etc) then fill the google form below
-and our technical adviser will contact you via chat or email.</p>
+and our technical adviser will contact you via sms,chat or email.</p>
 <p><span style="color:red">*</span><b>If</b> you are confused with the<u> buying decision </u>on some smartphones then fill only your contact details given below on the google form.Our team will contact and help you in your buying decision</p>
 
 <p style="text-align:center"><b>Free trial</b></p></div>
