--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  </head>
+  <body>
+<div style="padding:12px;width:100%;background-color:#e3f2fd"><h3>Hiveoftech</h3></div>
+<div style="padding:30px">
+<p><span style="color:red">* </span><b> There</b> is not any smartphone which is best in all aspects. For example 
+if you want better camera than you may need to sacrifice with the cpu performance in the price range</p>
+<p>Some of the <u>average</u> performance smartphone under Rs 15000 are:-<br>
+(i) Redmi Note 10s (ii) Redmi note 10T 5g (iii) Oppo A74 5g (iv) Realme 9 (v) Oppo F19 etc...
+</p>
+<p style="color:red">Most people buy the wrong smartphone and after buying them they realize that
+they have bought the wrong one. Some even didnot know even after buying it that there is a better phone avaliable in the market within 
+the same price range </p>
+<p> <span style="color:red">* </span><b>If</b> you want to know the <u>best</u> smartphone that will meet your <u>need</u> (for example:- gaming with avg camera,high camera with avg gaming etc) then fill the google form below
+and our technical adviser will contact you via sms,chat or email.</p>
+<p><span style="color:red">*</span><b>If</b> you are confused with the<u> buying decision </u>on some smartphones then fill only your contact details given below on the google form.Our team will contact and help you in your buying decision</p>
+
+<p style="text-align:center"><b>Free trial</b></p></div>
+
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfKC0ycsBJOFBMIDvTWB_VfO51ifvJQ8WK-34LZNONtrP_zwQ/viewform?embedded=true" width="400" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<br>
+
+
+<div style="padding:30px">
+    <h5 style="text-align:center">Things to consider before buying smartphone</h5>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+
+<p><b><u>Camera</u></b>- Most people thought that higher the
+mega pixels (mp) of cameras,higher will be the camera quality.
+But this is not truth.Mega pixels are only responsible for 
+details in the image.It has nothing to do with image quality.
+That is why iphones are better in quality even if they have less mega pixels.
+To buy a phone with better camera we have to look other things like
+camera sensor size(the larger,the better),camera focal length,camera sensor type etc.After 
+seeing all these then we have to look for mega pixels i.e the priority of mega pixels is very less for quality
+of image.</p>
+
+<div style="background-color:#f6f6f6;text-align:center;align-items:center;display:none">
+<div style="padding:15px;text-align:center">
+<h6>Confused! Which smartphone to buy under Rs 15000</h6></div>
+<p class="" style="text-align:center;padding:15px">Chat with our technical expert in whatsapp and he will help you out in choosing the best 
+smartphone under Rs 15000. He will also help you out in buying from the right place so that you can get maximum discount </p>
+<p><u>Free trial</u></p>
+<p class="" style="text:align:center"><a class="btn" role="button" href="https://wa.me/message/XK4JPY42B2LGL1" style="background-color:#ffa41d"><img src="https://img.icons8.com/color/38/000000/whatsapp--v1.png"/> <b>Whatsapp</b></a></p>
+</div>
+
+<p><b><u>RAM</u></b>- Most people think that higher the size of RAM higher 
+will be performance.But it is not truth.The performance of phone depends on RAM speed and memory type not on RAM capacity.
+RAM capacity helps us only in multi tasking.RAM capacity does not increase the performance of phone
+Higher the speed,higher will be the performance</p>
+
+
+<p><b><u>CPU</u></b>-Most peolple think that the performance of the cpu
+depends only on its clock speed.But it is not truth.The performance of the cpu mostly depends
+on its architecture,no of cores it has,its lithography process etc.The priorty
+of clock speed is not much as compared to its architecture.</p>
+
+<p><b>Storage</b>- Most people think higher the storage,more better it will be. But 
+it is not truth. The speed of phone depends on storage type not on storage capacity.</p>
+
+<p><b>Charging speed</b>-Most people think that higher the charging speed the better it is.
+But it is not.Because the phone which charges quickly also discharges quickly.Besides more heat is produced
+which is not very good for the phone.</p>
+
+<p><b>Battery capacity</b>-Most people think that higher the MAh of battery the better it is.
+But is not true. The backup of your phone depends on lots of factors. It depends on software.</p>
+</div>
+
+
+
+
+  </body>
+</html>
 
