--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <p><span style="color:red">* </span><b> There</b> is not any smartphone which is best in all aspects. For example 
 if you want better camera than you may need to sacrifice with the cpu performance in the price range</p>
 <p>Some of the <u>average</u> performance smartphone under Rs 15000 are:-<br>
-(i) Redmi Note 10s (ii) Redmi note 10T 5g (iii) Oppo A74 5g (iv) Realme 9 (v) Oppo F19 etc...
+<b>(i) Redmi Note 10s (ii) Redmi note 10T 5g (iii) Oppo A74 5g (iv) Realme 9 (v) Oppo F19</b> etc...
 </p>
 <p style="color:red">Most people buy the wrong smartphone and after buying them they realize that
 they have bought the wrong one. Some even didnot know even after buying it that there is a better phone avaliable in the market within 
