--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 <div style="padding:12px;width:100%;background-color:#e3f2fd"><h3>Hiveoftech</h3></div>
-<p style="text-align:center"><b>Free trial</b></p>
+<p style="text-align:center"><b>Best smartphone under 15000</b><br><b>Free trial</b></p>
 <div style="padding:15px">After filling the form our technical expert will reply you via chat, email or sms and will guide you in your buying decision.</div>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfKC0ycsBJOFBMIDvTWB_VfO51ifvJQ8WK-34LZNONtrP_zwQ/viewform?embedded=true" width="400" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 <br>
