--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <p>Benifits of our service :- <br>
 1. You donot have to search so much on internet<br>
 2. You save a lot of time<br>
-3. You get suggession from a expert</p>
+3. You get suggession from a expert<br>
+4. You did not need to be have any technical knowledge<br>
+5. You get your required smartphone</p>
 
 After filling the form our technical expert will reply you via chat, email or sms and will guide you in your buying decision.</div>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfKC0ycsBJOFBMIDvTWB_VfO51ifvJQ8WK-34LZNONtrP_zwQ/viewform?embedded=true" width="400" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
