--- a/index.html
+++ b/index.html
@@ -10,14 +10,10 @@
 <div style="padding:12px;width:100%;background-color:#e3f2fd"><h3>Hiveoftech</h3></div>
 <p style="text-align:center"><b>Best smartphone under 15000</b><br><b>Free trial</b></p>
 <div style="padding:15px">
-<p>Benifits of our service :- <br>
-1. You donot have to search so much on internet<br>
-2. You save a lot of time<br>
-3. You get suggession from a expert<br>
-4. You did not need to be have any technical knowledge<br>
-5. You get your required smartphone</p>
+<p> If you require any help regarding your buying decision of smartphone under Rs 15000 just tell us by filling the form 
+and we will help you out in your problem</p>
 
-After filling the form our technical expert will reply you via chat, email or sms and will guide you in your buying decision.</div>
+After filling the form our technical expert will reply you via chat, email or sms (whatever you like) and will guide you in your buying decision.</div>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfKC0ycsBJOFBMIDvTWB_VfO51ifvJQ8WK-34LZNONtrP_zwQ/viewform?embedded=true" width="400" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 <br>
 
