--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ it is not truth. The speed of phone depends on storage type not on storage capac
 
 <p><b>Charging speed</b>-Most people think that higher the charging speed the better it is.
 But it is not.Because the phone which charges quickly also discharges quickly.Besides more heat is produced
-which is not very good for the phone.</p>
+which is not very good for the <span>phone</span>.</p>
 
 <p><b>Battery capacity</b>-Most people think that higher the MAh of battery the better it is.
 But is not true. The backup of your phone depends on lots of factors. It depends on software.</p>
