--- a/index.html
+++ b/index.html
@@ -132,6 +132,24 @@ $(document).ready(function(){
 </script>
 
 
+
+
+<script src="https://github.com/tankchintan/highlight-js" type="text/javascript"></script> <!-- https://github.com/tankchintan/highlight-js -->
+      <script>
+      function highlightme()
+      {
+        var str=document.getElementById('search').value;
+        var strarray=str.split(" ");
+        void($('#content').removeHighlight().highlight(n)); //pass string array to function
+      }
+      </script>
+      <style type="text/css">
+        .highlight{ background-color:yellow; }
+      </style>
+<input type="text" name="search" id="search" onblur="highlightme()" />
+        <div id="content">Highlight Highlight Test Multiple</div>
+        <a href="JavaScript:$('#content').removeHighlight();">Clear
+
   </body>
 </html>
 
