--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ $(document).ready(function(){
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://johannburkard.de/resources/Johann/jquery.highlight-4.js"></script>
 
-<input type="search" id="searchBar" name="searchQuery" placeholder="Search for name...">
+<input class="form-control" type="search" id="searchBar" name="searchQuery" placeholder="Search for name...">
 <div class='monitor'>Lorem ipsum "dolor" dolor</div>
 <script>
 $('#searchBar').keyup(function() {
