--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ $('#searchBar').keyup(function() {
   
 <!-- .................................................................................   -->
   
-  
+  <style> td{border:1px solid black;border-spacing:10px}</style>
   
   <article id="the-app">
 		<div class="card">
