--- a/index.html
+++ b/index.html
@@ -128,8 +128,7 @@ But is not true. The backup of your phone depends on lots of factors. It depends
 $(document).ready(function(){
   $("#myInput").on("keyup", function() {
     var value = $(this).val().toLowerCase();
-var search_term = $('#myinput').val();
-    $(".specs-table tr").removeHighlight().highlight(search_term).filter(function() {
+    $(".specs-table tr").removeHighlight().highlight(value).filter(function() {
       $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
     });
   });
