--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@ $('#searchBar').keyup(function() {
   
 <!-- .................................................................................   -->
   
-  <style> td{border:1px solid black;border-spacing:10px};div{display:none}</style>
+  <style> td{border:1px solid black;border-spacing:10px} 
+          div{display:none}</style>
   
   <article id="the-app">
 		<div class="card">
