--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ $('#searchBar').keyup(function() {
   
 <!-- .................................................................................   -->
   
-  <style> td{border:1px solid black;border-spacing:10px} 
+  <style> td{} 
           div,caption{display:none}
           div#dtable{display:block}</style>
   
