--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ $('#searchBar').keyup(function() {
 				</div>
 			</div>
 		<div id="dtable" class="table-responsive">	
-		<table id="table" class="table specs-table table-responsive" 
+		<table id="table" class="table specs-table table-responsive">
 			 data-toggle="table"
 			 data-search="true"
 			 data-filter-control="true" 
